--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  background-color: #61dafb;
+  align-items: center;
+  padding: 8px;
+  padding-top: 32px;
+  gap: 16px;
 }
 
 .App-logo {
