--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,15 @@
   width: 100vw;
   display: flex;
   flex-direction: column;
-  background-color: #61dafb;
+  background-color: #F8F0E5;
   align-items: center;
   padding: 8px;
   padding-top: 32px;
   gap: 16px;
+}
+
+::-webkit-scrollbar{
+  width: 0;
 }
 
 .App-logo {
@@ -19,21 +23,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
